--- a/src/mail/mjml/invite.mjml
+++ b/src/mail/mjml/invite.mjml
@@ -1,17 +1,30 @@
 <mjml>
-  <mj-body>
+  <mj-body background-color="#F8F9FA">
     <mj-section>
       <mj-column>
-        <mj-divider border-color="#F45E43"></mj-divider>
-        <mj-text font-size="20px" color="#F45E43" font-family="helvetica">
-          Подтвердите регистрацию кликнув по ссылке ниже
+        <mj-text font-size="24px" color="#1E1E2A" font-family="helvetica" align="center">
+          Привет, {{MEMBER}}!
         </mj-text>
-        <mj-button
-          background-color="#F45E43"
-          cursor="pointer"
-          href="{{LINK}}">
-          {{LINK_NAME}}
+        <mj-divider border-color="#1E1E2A"></mj-divider>
+        <mj-text font-size="20px" color="#1E1E2A" font-family="helvetica" align="center">
+          {{INVITER}} приглашает тебя в проект "{{PROJECT}}".
+        </mj-text>
+        <mj-text font-size="16px" color="#1E1E2A" font-family="helvetica" align="center">
+          Нажми на кнопку ниже, чтобы принять приглашение:
+        </mj-text>
+        <mj-button background-color="#22C395" cursor="pointer" href="{{LINK}}">
+          Принять приглашение
         </mj-button>
+        <mj-text font-size="14px" color="#1E1E2A" font-family="helvetica" align="center">
+          Или скопируй эту ссылку и вставь в браузер:
+        </mj-text>
+        <mj-section border-radius="5px" border="1px solid #C8C8C8" background-color="#D8D8D8" background-size="50%">
+          <mj-column>
+            <mj-text font-size="12px" color="#1E1E2A" font-family="helvetica" align="center">
+              {{LINK}}
+            </mj-text>
+          </mj-column>
+        </mj-section>
       </mj-column>
     </mj-section>
   </mj-body>
